--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,18 +1,17 @@
 version: '3.8'
 
 services:
-  frontend:
+  nginx:
     build:
-      context: ./frontend
-      dockerfile: Dockerfile.prod
+      context: .
+      dockerfile: nginx/Dockerfile
     ports:
       - "80:80"
-    # depends_on:
-    #   - backend
+    depends_on:
+      - backend
 
-  # backend:
-  #   build: ./backend
-  #   environment:
-  #     - ENV=production
-  #   ports:
-  #     - "8000:8000"
+  backend:
+    build:
+      context: ./backend
+    ports:
+      - "8000:8000"
