--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,17 +8,17 @@ services:
     volumes:
       - ./frontend:/app
       - /app/node_modules
-    # command: ["npm", "run", "dev"]
-    # depends_on:
-    #   - backend
+    command: ["npm", "run", "dev"]
+    depends_on:
+      - backend
 
-  # backend:
-  #   build: ./backend
-  #   ports:
-  #     - "8000:8000"
-  #   volumes:
-  #     - ./backend:/app
-  #     - /app/venv
-  #   environment:
-  #     - ENV=development
-  #   command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+  backend:
+    build: ./backend
+    ports:
+      - "8000:8000"
+    volumes:
+      - ./backend:/app
+      - /app/venv
+    environment:
+      - ENV=development
+    command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
