--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,7 +7,9 @@ WORKDIR /app
 # Copy package.json and package-lock.json
 COPY package*.json ./
 
+
 # Install dependencies
+RUN npm cache clean --force
 RUN npm install
 
 # Copy the rest of the application code
