--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,9 +12,11 @@ httptools==0.6.1
 httpx==0.27.0
 idna==3.7
 Jinja2==3.1.4
+langchain==0.0.283
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
+openai==0.28.0
 pydantic==2.8.2
 pydantic_core==2.20.1
 Pygments==2.18.0
