--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "downshift": "^9.0.6",
+    "immer": "^10.1.1",
     "lucide-react": "^0.408.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
