--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,17 @@
 annotated-types==0.7.0
 anyio==4.4.0
+azure-cosmos==4.7.0
+azure-storage-blob==12.21.0
+azure-identity==1.17.1
 certifi==2024.7.4
 click==8.1.7
+docx==0.2.4
 dnspython==2.6.1
 email_validator==2.2.0
 fastapi==0.111.1
 fastapi-cli==0.0.4
 h11==0.14.0
+html-to-docx==0.0.5
 httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
@@ -29,6 +34,7 @@ sniffio==1.3.1
 starlette==0.37.2
 typer==0.12.3
 typing_extensions==4.12.2
+uuid==1.30
 uvicorn==0.30.1
 uvloop==0.19.0
 watchfiles==0.22.0
